objects/TW1_Informacoes_historicas__c.object
<CustomObject>
    <fields>
        <fullName>TW1_AMM_faturado__c</fullName>
        <label>AMM faturado</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Aluguel_percentual_faturado__c</fullName>
        <label>Aluguel percentual faturado</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Area__c</fullName>
        <label>Área</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Condominio_comum__c</fullName>
        <label>Condomínio comum</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Condominio_comum_m2__c</fullName>
        <label>Condomínio comum /m2</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Custo_Ocupacao_Comum__c</fullName>
        <label>Custo Ocupação Comum</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Custo_Ocupacao_Comum_m2__c</fullName>
        <label>Custo Ocupação Comum/m²</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_FPP_Total_faturado__c</fullName>
        <label>FPP Total faturado</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_FPP_m2__c</fullName>
        <label>FPP /m2</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Grocc_Comum_percentual__c</fullName>
        <label>Grocc Comum (%)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Grupo_de_atividade__c</fullName>
        <label>Grupo de atividade</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Lucs_secundarias__c</fullName>
        <label>Lucs secundárias</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Marca__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marca</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>O valor preenchido no filtro não retornou nenhum registro existente.</errorMessage>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Marca</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Informações históricas da propriedade</relationshipLabel>
        <relationshipName>Informacoes_historicas_da_propriedade</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Nome_fantasia__c</fullName>
        <label>Nome fantasia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Percentual_sobre_vendas__c</fullName>
        <label>Percentual sobre vendas</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Propriedade1__c</fullName>
        <label>Propriedade</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Propriedade__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Propriedade old</label>
        <referenceTo>TW1_Propriedade__c</referenceTo>
        <relationshipLabel>Informações históricas da propriedade</relationshipLabel>
        <relationshipName>Informacoes_historicas_da_propriedade</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Ramo_de_atividade__c</fullName>
        <label>Ramo de atividade</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Shopping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shopping</label>
        <referenceTo>TW1_Shopping__c</referenceTo>
        <relationshipLabel>Informações históricas da propriedade</relationshipLabel>
        <relationshipName>Informacoes_historicas_da_propriedade</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Tipo_de_Atividade__c</fullName>
        <label>Tipo de Atividade</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Valor_do_Aluguel_m2__c</fullName>
        <label>Valor do Aluguel /m2</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Venda_Total__c</fullName>
        <label>Venda Total</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_descricao_aluguel_dobrado__c</fullName>
        <label>Descrição do aluguel dobrado</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vendas_Total_m2__c</fullName>
        <label>Vendas Total /m2</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Informação histórica da propriedade</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Ano/Mes</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Informações históricas da propriedade</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>